finished html structure

--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="utf-8">
     <title>Krunal's Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   </head>
 
   <body>
-
+    <div class="container">
+      <div class="sidebar">
+        <nav>
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="content">
+        <section class="image">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvG4Xymdgkd3xwKLjLpA_G6bXdnrAPCM1s011LWOUsngaHqmuJ" alt="photo of me">
+          <div class="bio">
+            <h1>Self-taught dedicated frontend programmer</h1>
+            <p>Hi, I'm passionate about programming and love to create all sorts of webpages</p>
+            <a class="btn" "href="#">Learn More</a>
+          </div>
+        </section>
+      </div>
+      <div class="footer">
+        <footer>
+          <ul>
+            <li><a href="#">Github</a></li>
+            <li><a href="#">LinkedIN</a></li>
+            <li><a href="#">Facebook</a></li>
+          </ul>
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
