--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <div class="container">
-      <div class="sidebar">
+      <div class="navbar">
         <nav>
           <ul>
             <li><a href="#">About</a></li>
