--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       <div class="footer">
         <footer>
           <ul>
-            <li><a href="#">Github</a></li>
-            <li><a href="#">LinkedIN</a></li>
-            <li><a href="#">Facebook</a></li>
+            <li><a href="#"><i class="fab fa-github"></i></a></li>
+            <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
           </ul>
         </footer>
       </div>
