--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Krunal's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
@@ -23,9 +24,9 @@
         <section class="image">
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvG4Xymdgkd3xwKLjLpA_G6bXdnrAPCM1s011LWOUsngaHqmuJ" alt="photo of me">
           <div class="bio">
-            <h1>Self-taught dedicated frontend programmer</h1>
+            <h1>Self-Taught Frontend Developer</h1>
             <p>Hi, I'm passionate about programming and love to create all sorts of webpages</p>
-            <a class="btn" "href="#">Learn More</a>
+            <a class="btn" href="#">Learn More</a>
           </div>
         </section>
       </div>
