--- a/index.html
+++ b/index.html
@@ -1,44 +1,67 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Krunal's Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   </head>
 
   <body>
-    <div class="container">
-      <div class="navbar">
-        <nav>
+      <header>
+        <nav id="navbar">
           <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a class="nav-links" href="#welcome-section">About</a></li>
+            <li><a class="nav-links" href="#projects">Projects</a></li>
+            <li><a class="nav-links" href="#contacts">Contact</a></li>
           </ul>
         </nav>
-      </div>
-      <div class="content">
-        <section class="image">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvG4Xymdgkd3xwKLjLpA_G6bXdnrAPCM1s011LWOUsngaHqmuJ" alt="photo of me">
-          <div class="bio">
-            <h1>Self-Taught Frontend Developer</h1>
-            <p>Hi, I'm passionate about programming and love to create all sorts of webpages</p>
-            <a class="btn" href="#">Learn More</a>
-          </div>
+      </header>
+
+      <main id="content">
+        <section id="welcome-section">
+          <h1>Self-Taught Frontend Developer</h1>
+          <p>Hi, I'm a passionate programmer who loves building websites with great user interface.
+            <a href="#" id="email"></br>Email</a> me for more information.
+          </p>
         </section>
-      </div>
-      <div class="footer">
-        <footer>
-          <ul>
-            <li><a href="#"><i class="fab fa-github"></i></a></li>
-            <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-            <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-          </ul>
-        </footer>
-      </div>
-    </div>
+        <div id="projects">
+          <h2>My Projects</h2>
+          <div class="project-tile">
+            <a href="https://codepen.io/kpatel27-the-sans/full/ZZRXoo" target="_blank">Image Coming Soon</a>
+            <p class="project-title">Technical Documentation</p>
+          </div>
+          <div class="project-tile">
+            <a href="https://codepen.io/kpatel27-the-sans/full/oOodjK" target="_blank">Image Coming Soon</a>
+            <p class="project-title">Survey Form</p>
+          </div>
+          <div class="project-tile">
+            <a href="https://codepen.io/kpatel27-the-sans/full/LvdVPw" target="_blank">Image Coming Soon</a>
+            <p class="project-title">Product Landing Page</p>
+          </div>
+          <div class="project-tile">
+            <a href="https://codepen.io/kpatel27-the-sans/full/WWZZQW" target="_blank">Image Coming Soon</a>
+            <p class="project-title">Tribute Page</p>
+          </div>
+          <a id="view-more" href="https://codepen.io/kpatel27-the-sans/" target="_blank">View More</a>
+        </div>
+        <div id="contacts">
+          <h2>Contact for more info</h2>
+          <div class="contact">
+            <i class="fas fa-envelope-open-text fa-2x"></i>
+            <span>abcdef@gmail.com</span>
+          </div>
+          <div class="contact">
+            <i class="fas fa-phone fa-2x"></i>
+            <span>+1 (123) 456-7890</span>
+          </div>
+          <div class="contact">
+            <a id="profile-link" href="https://www.freecodecamp.org/kppatel" target="_blank">freeCodeCamp</a>
+          </div>
+        </div>
+      </main>
+
+      <footer id="footer">
+      </footer>
   </body>
 </html>
