--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </p>
 
         <p>
-          Most recently, I built
+          Most recently, I co-created
           <a class="jade jade" href="https://jadeframework.dev/" target="_blank"
             >Jade</a
           >, an open-source framework for deploying JAMstack applications on AWS
@@ -174,7 +174,7 @@
       </section>
 
       <section id="contact" class="flexbox horz-center">
-        <h3>Contact</h3>
+        <h3>Let's connect</h3>
         <h4>
           <a id="email" href="mailto:kppatel727@gmail.com"
             >kppatel727@gmail.com</a
