--- a/index.html
+++ b/index.html
@@ -174,44 +174,26 @@
       </section>
 
       <section id="contact" class="flexbox horz-center">
-        <h3>Let's connect</h3>
+        <h2>More About Me</h2>
+        <p>
+          While I have experience developing software with Ruby, JavaScript SQL,
+          React/Redux, Node.js, and Rails for the past few years, I consider
+          myself language and framework agnostic. I am able to adapt to any
+          technology best suited to the needs of a project.
+        </p>
+        <a
+          id="resume-button"
+          href="assets/krunal_patel_resume.pdf"
+          target="_blank"
+        >
+          <button>Resume</button>
+        </a>
+        <h3 id="connect">Let's connect</h3>
         <h4>
-          <a id="email" href="mailto:kppatel727@gmail.com"
-            >kppatel727@gmail.com</a
-          >
+          <a id="email" href="mailto:kppatel727@gmail.com">
+            kppatel727@gmail.com
+          </a>
         </h4>
-        <ul class="flexbox vert-center">
-          <li>
-            <a href="assets/krunal_patel_resume.pdf" target="_blank">
-              <img
-                class="icon"
-                src="assets/icons/resume.svg"
-                alt="link for resume"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="https://github.com/kpatel27" target="_blank">
-              <img
-                class="icon"
-                src="assets/icons/github.svg"
-                alt="link to GitHub profile"
-              />
-            </a>
-          </li>
-          <li>
-            <a
-              href="https://www.linkedin.com/in/krunal-p-patel/"
-              target="_blank"
-            >
-              <img
-                class="icon"
-                src="assets/icons/linkedin.svg"
-                alt="link to  LinkedIn profile"
-              />
-            </a>
-          </li>
-        </ul>
       </section>
     </main>
   </body>
